[package]
name = "poseidon2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
ark-std = { workspace = true, features = ["getrandom", "std"] }
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "poseidon2"
harness = false
