[package]
name = "smart-contract-mock"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-babyjubjub = { path = "../ark-babyjubjub" }
ark-bn254.workspace = true
ark-ec.workspace = true
axum = { workspace = true, features = ["http2", "ws"] }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
futures-util = "0.3.31"
git-version.workspace = true
humantime.workspace = true
parking_lot.workspace = true
rand_chacha.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync", "time", "tokio-macros"] }
tokio-util.workspace = true
tower-http = { workspace = true, features = ["set-header", "cors", "trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing.workspace = true
rustls.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

ark-serde-compat = { path = "../ark-serde-compat" }
oprf-core = { path = "../oprf-core" }
oprf-types = { path = "../oprf-types" }
poseidon2 = { path = "../poseidon2" }
