[package]
name = "smart-contract-mock"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true, features = ["http2", "ws"] }
clap = { workspace = true, features = ["derive", "env"] }
eyre = { workspace = true }
git-version = { workspace = true }
humantime = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
nodes-telemetry = { workspace = true }
oprf-types = { workspace = true }
parking_lot = { workspace = true }
poseidon2 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync", "time", "tokio-macros"] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["serde", "v4"] }
